<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/favorite_char"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/favorite_character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_large"
            android:fontFamily="@font/gameofthrones"
            android:hint="@string/favorite_char_editText"
            android:inputType="text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/black" />

        <!--QUESTION 2-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/q_2_answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_large"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_2_answer_a"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/q_2_answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_large"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_2_answer_b"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/q_2_answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_large"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_2_answer_c"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/q_2_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_large"
            android:fontFamily="@font/gameofthrones"
            android:text="Peter Baelish"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black" />
        <!--END QUESTION 2-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/black" />

        <!--QUESTION 3-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q_3_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:fontFamily="@font/gameofthrones"
                    android:text="@string/q_3_answer_a"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/q_3_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:fontFamily="@font/gameofthrones"
                    android:text="@string/q_3_answer_b"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />
            </RadioGroup>

        </LinearLayout>
        <!--END QUESTION 3-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/black" />

        <!--QUESTION 4-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/q_4"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q_4_answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                android:fontFamily="@font/gameofthrones"
                android:text="@string/q_4_answer_a"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/q_4_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                android:fontFamily="@font/gameofthrones"
                android:text="@string/q_4_answer_b"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/q_4_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"
                android:fontFamily="@font/gameofthrones"
                android:text="@string/q_4_answer_c"
                android:textAppearance="?android:textAppearanceSmall"

                android:textColor="@android:color/black" />

        </RadioGroup>
        <!--END QUESTION 4-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:gravity="center_horizontal"
            android:onClick="submit"
            android:text="finish"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:fontFamily="@font/gameofthrones"
            android:gravity="center_horizontal"
            android:text="Score: "
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>